--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,14 @@
 body {
     font-family: 'Mountains of Christmas', cursive; /* Festive font */
     text-align: center;
-    background-color: #f0f8ff; /* Light blue background for a winter vibe */
     color: #333; /* Dark text for contrast */
     margin: 0;
     padding: 0;
+    background-image: url(https://cdn.pixabay.com/photo/2020/05/20/10/17/christmas-5195815_960_720.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 /* Page heading styles */
